--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,13 +83,11 @@
     <string name="key_host_address">host_address</string>
     <string name="pref_title_host_address">Dirección del servidor</string>
     <!--string name="pref_default_host_address">10.50.4.3</string-->
-<!--
     <string name="pref_default_host_address">54.218.193.119</string>
--->
     <!--string name="pref_default_host_address">10.80.63.236</string-->
     <!--<string name="pref_default_host_address">10.126.0.229</string>-->
 
-    <string name="pref_default_host_address">52.24.232.162</string>
+    <!--<string name="pref_default_host_address">52.24.232.162</string>-->
     <string name="pref_summary_host_address">El nombre del host o la dirección IP del servidor de streaming.</string>
 
     <!-- Puerto del servidor-->
@@ -123,8 +121,8 @@
     <string name="key_password">password</string>
     <string name="pref_title_password">Contraseña</string>
     <string name="pref_summary_password">La contraseña para la autenticación.</string>
-    <!--<string name="pref_default_password">Tpp1L1v3</string>-->
-    <string name="pref_default_password">Tpp1L1ve</string>
+    <string name="pref_default_password">Tpp1L1v3</string>
+    <!--<string name="pref_default_password">Tpp1L1ve</string>-->
 
     <!-- TODO: Strings preferences local video-->
     <!-- Keys preferences video local -->
